[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pisces-lca-exports"
version = "0.1.0"
description = "Export PISCES SFF flowsheets to LCA tool formats (Brightway, OpenLCA, PyGREET)"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
brightway = ["brightway2>=2.4"]
openlca = []
pygreet = []
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pisces_lca_exports"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
